# carsXE-pipeline

./: .gitignore  README.md  output.json  pyproject.toml  requirements.txt  source_data.json
collector/: build.py  models.py  normalize.py  validate.py
docs/superpowers/plans/: 2026-06-09-toyota-spec-collector.md
src/spec_collector/: __init__.py  cli.py  errors.py  export.py  logging_config.py  models.py  normalize.py  pipeline.py  registry.py  retry.py
src/spec_collector/providers/: __init__.py  base.py
src/spec_collector/providers/honda/: provider.py  source_data.json
src/spec_collector/providers/sources/: __init__.py  epa.py  http.py
src/spec_collector/providers/sources/cache/: epa_honda.json
src/spec_collector/providers/toyota/: provider.py  source_data.json
tests/: test_build.py  test_models.py  test_normalize.py  test_pipeline.py  test_providers.py  test_sources.py  test_validate.py
tests/fixtures/: source_min.json
