[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "spec-collector"
version = "0.1.0"
description = "Re-runnable, extensible collector for OEM vehicle specifications."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
spec-collector = "spec_collector.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
spec_collector = ["providers/*/source_data.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
